styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Borel&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base{
    body {
        @apply dark:bg-stone-500 bg-stone-200 text-black dark:text-stone-200 
    }
}

